@@ -19,13 +19,14 @@
 
 @red: #d53f40;
 @red2: #d15b47;
-@orange: #e8b110;
+@orange: #ffb752;
 @light-green: #9abc32;
 @green: #82af6f;
 @blue3: #6379aa;
 @light-blue: #6fb3e0;
 @purple: #6f3cc4;
 @purple2: #7e6eb0;
+@grey: #abbac3;
 
 @ticket_color: #AA2222;
 @even_ticket_border_color: #EE8888;
@@ -86,10 +87,6 @@ tr {
     
 }
 
-
-
-
-
 .header-color-project {
     background: @green;
     border-color: @green;
@@ -126,29 +123,53 @@ tr {
     }
 }
 
-.new {
-    background-color: @red;
+
+.pln { // planning
+    background-color: @grey;
     color: white;
+    a {
+        color: white;
+    }
+}
+
+.new {
+    background-color: @red2;
+    color: white;
+    a {
+        color: white;
+    }
 }
 
 .wip {
     background-color: @orange;
     color: white;
+    a {
+        color: white;
+    }
 }
 
 .prev {
     background-color: @light-blue;
     color: white;
+    a {
+        color: white;
+    }
 }
 
 .hrev {
-    background-color: @purple;
+    background-color: @purple2;
     color: white;
+    a {
+        color: white;
+    }
 }
 
 .cmpl {
     background-color: @green;
     color: white;
+    a {
+        color: white;
+    }
 }
 
 .icon-task {
