@@ -175,7 +175,7 @@
                     for (i = 0; i < data.length; i++) {
                         // fix dates
 
-                        console.log(data[i].name + ' : ' + data[i].percent_complete);
+{#                        console.log(data[i].name + ' : ' + data[i].percent_complete);#}
                         data[i].link = '/assets/' + data[i].id + '/view';
 
                         if (data[i].thumbnail_full_path == null) {
