@@ -49,7 +49,7 @@
                            data-target="#dialog_template"
                            data-toggle="modal"
                            data-keyboard=false
-                           href='{{ request.route_url("sequence_dialog", id=-1, mode='create') }}'>Create
+                           href='{{ request.route_url("create_sequence_dialog", id=-1) }}'>Create
                         </a>
                     </button>
                 </div>
