@@ -46,7 +46,7 @@
                            data-target="#dialog_template"
                            data-toggle="modal"
                            data-keyboard=false
-                           href='{{ request.route_url("shot_dialog", id=-1, mode='create') }}'>Create
+                           href='{{ request.route_url("create_shot_dialog", id=-1) }}'>Create
                         </a>
                     </button>
                 </div>
